[project]
name = "dsa-study"
version = "0.2.0"
description = "A project to implement various data structures and algorithms in Python."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"

authors = [
    { name = "Pablo Hernandez" }
]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dsa"]

[project.urls]
Repository = "https://github.com/pablohernandezdo/dsa-study-library"
