[project]
name = "dsa-study"
version = "0.4.1"
description = "A project to implement various data structures and algorithms in Python."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"

authors = [
    { name = "Pablo Hernandez" }
]
dependencies = []

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dsa"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[project.urls]
Repository = "https://github.com/pablohernandezdo/dsa-study-library"
