[project]
name = "dsa-study"
version = "0.4.2"
description = "A project to implement various data structures and algorithms in Python."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
]

authors = [
    { name = "Pablo Hernandez" }
]
dependencies = []

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dsa"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[project.urls]
Repository = "https://github.com/pablohernandezdo/dsa-study-library"
